--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -28,7 +28,12 @@
     "slick": "^1.12.2",
     "slick-carousel": "^1.8.1",
     "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "core-js": "^3.31.0",
+    "prop-types": "^15.8.1",
+    "react-app-polyfill": "^3.0.0",
+    "redux": "4.2.1",
+    "simplebar-react": "^2.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
