--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -11,16 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "firebase": "^10.6.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.1",
+    "redis": "^4.6.13",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0"
   }
